--- a/public/styles.css
+++ b/public/styles.css
@@ -131,7 +131,7 @@ header {
   width: 100%;
 }
 
-.header-container {
+.navbar-container {
   display: flex;
   justify-content: space-between;
   align-items: center;
